base/argocd/resources/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
      name: GATEWAY_NAME
      sectionName: https-terminated
  hostnames:
    - argocd.CLUSTER_DOMAIN
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
